--- a/.github/workflows/code-coverage_windows.yml
+++ b/.github/workflows/code-coverage_windows.yml
@@ -120,12 +120,14 @@ jobs:
       run: go test -coverpkg="./..." -covermode=count -c -o cloudfuse.test
 
     - name: Install Windows Service
-      run: "./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_gentest1.cov service install"
-      shell: powershell
+      run: |-
+        ./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_gentest1.cov service install
+        sleep 5
 
     - name: Start Windows Service
-      run: "./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_gentest1.cov service start"
-      shell: powershell
+      run: |-
+        ./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_gentest1.cov service start
+        sleep 5
     
     - name: Create Config File - Block Blob
       shell: bash
