Fix for windows

--- a/.github/workflows/code-coverage_windows.yml
+++ b/.github/workflows/code-coverage_windows.yml
@@ -177,6 +177,7 @@ jobs:
         sleep 5
     
     - name: Create Config File - ADLS
+      shell: bash
       env:
         NIGHTLY_STO_ACC_NAME: "${{ secrets.AZTEST_ADLS_ACC_NAME }}"
         NIGHTLY_STO_ACC_KEY: "${{ secrets.AZTEST_ADLS_KEY }}"
@@ -187,6 +188,7 @@ jobs:
       run: "./cloudfuse.test gen-test-config --config-file=azure_key.yaml --container-name=${{ matrix.containerName }} --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_ADLS_CFG }}"
     
     - name: ADLS Coverage
+      shell: bash
       run: |-
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
@@ -195,11 +197,12 @@ jobs:
         ps -aux | grep cloudfuse
         rm -rf ${{ env.MOUNT_DIR }}/*
         cd test/e2e_tests
-        go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -quick-test=true -stream-direct-test=true
+        go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -adls=true -quick-test=true -stream-direct-test=true
         cd -
         sleep 5
     
     - name: ADLS Coverage with profilers
+      shell: bash
       run: |-
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
@@ -222,6 +225,7 @@ jobs:
         sleep 5
     
     - name: Create Config File - S3
+      shell: bash
       env:
         S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
         S3_ENDPOINT: "${{ secrets.S3TEST_ENDPOINT }}"
@@ -231,6 +235,7 @@ jobs:
       run: "./cloudfuse.test gen-test-config --config-file=s3_key.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
     
     - name: S3 Coverage
+      shell: bash
       run: |-
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
@@ -243,6 +248,7 @@ jobs:
         sleep 5
     
     - name: S3 Coverage with profilers
+      shell: bash  
       run: |-
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
@@ -264,6 +270,7 @@ jobs:
         sleep 5
     
     - name: Create Config File - LFU
+      shell: bash
       env:
         NIGHTLY_STO_ACC_NAME: "${{ secrets.NIGHTLY_STO_BLOB_ACC_NAME }}"
         NIGHTLY_STO_ACC_KEY: "${{ secrets.NIGHTLY_STO_BLOB_ACC_KEY }}"
@@ -273,6 +280,7 @@ jobs:
       run: "./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_gentest2.cov gen-test-config --config-file=azure_key_lfu.yaml --container-name=${{ matrix.containerName }} --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
     
     - name: Block Blob LFU Coverage
+      shell: bash
       run: |-
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
@@ -287,6 +295,7 @@ jobs:
       working-directory: "${{ env.WORK_DIR }}"
     
     - name: Create Config File - S3 LFU
+      shell: bash
       env:
         S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
         S3_ENDPOINT: "${{ secrets.S3TEST_ENDPOINT }}"
@@ -296,6 +305,7 @@ jobs:
       run: "./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_gentest2_s3.cov gen-test-config --config-file=s3_key_lfu.yaml --container-name=${{ matrix.containerName }} --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
     
     - name: S3 LFU Coverage
+      shell: bash
       run: |-
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
@@ -308,6 +318,7 @@ jobs:
         sleep 5
     
     - name: Create Config File - Stream
+      shell: bash
       env:
         NIGHTLY_STO_ACC_NAME: "${{ secrets.NIGHTLY_STO_BLOB_ACC_NAME }}"
         NIGHTLY_STO_ACC_KEY: "${{ secrets.NIGHTLY_STO_BLOB_ACC_KEY }}"
@@ -317,6 +328,7 @@ jobs:
       run: "./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_gentest3.cov gen-test-config --config-file=azure_stream.yaml --container-name=${{ matrix.containerName }} --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_STREAM_CFG }}"
     
     - name: Block Blob Stream Preparation
+      shell: bash
       run: |-
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
@@ -328,9 +340,11 @@ jobs:
         sleep 5"
     
     - name: Block Blob Stream Coverage
+      shell: bash
       run: "rm -rf ${{ env.MOUNT_DIR }}/*\nrm -rf ${{ env.TEMP_DIR }}/*\n./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_stream.cov mount ${{ env.MOUNT_DIR }} --config-file=${{ env.cloudfuse_STREAM_CFG }} --foreground=true &\nsleep 10\nps -aux | grep cloudfuse\nrm -rf ${{ env.MOUNT_DIR }}/*\ncd test/e2e_tests\ngo test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -quick-test=true -stream-direct-test=true\ncd -\n./cloudfuse.test service unmount ${{ env.MOUNT_DIR }} \nsleep 5"
     
     - name: Create Config File - Block Blob
+      shell: bash
       env:
         NIGHTLY_STO_ACC_NAME: "${{ secrets.NIGHTLY_STO_BLOB_ACC_NAME }}"
         NIGHTLY_STO_ACC_KEY: "${{ secrets.NIGHTLY_STO_BLOB_ACC_KEY }}"
@@ -341,6 +355,7 @@ jobs:
       run: "./cloudfuse.test gen-test-config --config-file=azure_key.yaml --container-name=${{ matrix.containerName }} --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
     
     - name: 'CLI : Component Generation'
+      shell: bash
       run: |-
         ./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/generate_cmd.cov generate test_component
         if [ $? -ne 0 ]; then
@@ -348,6 +363,7 @@ jobs:
         fi
     
     - name: 'CLI : Mount List'
+      shell: bash
       run: |-
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
